--- a/src/components/cover/style.css
+++ b/src/components/cover/style.css
@@ -9,6 +9,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  z-index: 2;
 }
 
 .link {
